# PC_challenge

./: .gitignore  CMakeLists.txt  main.cpp  plot.ipynb  references.bib  report.tex
src/: parallel.cpp  serial.cpp
